# invenio-record-importer-kcworks

./: .gitignore  .gitmodules  CHANGES.md  CREATED_DATES_UPDATE_PLAN.md  LICENSE  MANIFEST.in  Pipfile  README.md  RECORD_STATE_TREE.md  VERSION  pyproject.toml  run-tests.sh
.github/workflows/: test.yml
invenio_record_importer/: config.py  core_migrate_users.py  errors.py  ext.py  fedora_fetcher.py  main.py  queries.py  record_loader.py  serializer.py  services.py  tasks.py  utils.py
invenio_record_importer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
invenio_record_importer/legacy/: fedora_fetcher.py
invenio_record_importer/libs/: date_parser.py
invenio_record_importer/logs/: core_migrate.log.1  core_migrate.log.2  core_migrate.log.3  core_migrate.log.4  core_migrate.log.5  core_migrate_failed_records.jsonl  core_migrate_touched_records.jsonl  invenio_record_importer_touched.jsonl  record_importer_serialized_failed.jsonl  serializer_failed.jsonl
invenio_record_importer/services/: communities.py  files.py  serialization.py  stats.py
invenio_record_importer/services/stats/: stats.py
invenio_record_importer/utils/: utils.py
invenio_record_importer_kcworks/: __init__.py  cli.py  config.py  errors.py  ext.py  main.py  parser.py  permissions.py  proxies.py  queries.py  record_loader.py  resources.py  results.py  serializer.py  service.py  tasks.py  types.py
invenio_record_importer_kcworks/deprecated/: __init__.py  serializer.py
invenio_record_importer_kcworks/deprecated/legacy/: core_migrate_users.py  fedora_fetcher.py
invenio_record_importer_kcworks/deprecated/tests/: __init__.py  conftest.py  test_serializer.py
invenio_record_importer_kcworks/legacy/: core_migrate_users.py  fedora_fetcher.py
invenio_record_importer_kcworks/libs/: date_parser.py  fedoraapi.py
invenio_record_importer_kcworks/logs/: record_importer_created_log_neh.jsonl  record_importer_failed_log_ed814301-1bbb-4b21-96d6-3b9503e4df5d.jsonl
invenio_record_importer_kcworks/services/: communities.py  files.py  records.py  serialization.py  users.py
invenio_record_importer_kcworks/services/stats/: aggregations.py  stats.py
invenio_record_importer_kcworks/utils/: __init__.py  core_crawler.py  utils.py
scripts/: use-nested-dependencies.sh  use_nested_dependencies.py
tests/: conftest.py  core_crawler_test.py  core_migrate_test.py  record_loader_test.py  stats-testing.ipynb  test_created_dates.py
tests/api/: test_api_import.py  test_communities_helper.py  test_created_dates.py  test_files_helper.py  test_record_loader.py  test_records_helper.py  test_stats_helper.py  test_users_helper.py
tests/cli/: __init__.py  test_cli.py
tests/fixtures/: communities.py  custom_fields.py  files.py  fixtures.py  identifiers.py  mail.py  records.py  saml.py  search_provisioning.py  stats.py  users.py
tests/fixtures/metadata_fields/: codemeta_fields.py  hclegacy_groups_for_deposit.py  hclegacy_metadata_fields.py  imprint_fields.py  journal_fields.py  kcr_ai_field.py  kcr_media_field.py  kcr_metadata_fields.py  kcr_notes_fields.py  kcr_series_field.py  kcr_user_tags_fields.py  kcr_volumes_fields.py
tests/fixtures/vocabularies/: affiliations.py  community_types.py  date_types.py  descriptions.py  funding_and_awards.py  languages.py  licenses.py  resource_types.py  roles.py  subjects.py  title_types.py
tests/helpers/: files_helper.py  records-for-import.json  util.ipynb
tests/helpers/kcworks/: __init__.py
tests/helpers/kcworks/services/: __init__.py
tests/helpers/kcworks/services/search/: __init__.py
tests/helpers/kcworks/services/search/index_templates/: __init__.py
tests/helpers/kcworks/services/search/index_templates/stats/: __init__.py
tests/helpers/kcworks/services/search/index_templates/stats/aggr_file_download/: __init__.py
tests/helpers/kcworks/services/search/index_templates/stats/aggr_file_download/os-v2/: __init__.py  aggr-file-download-v1.0.0.json
tests/helpers/kcworks/services/search/index_templates/stats/aggr_record_view/: __init__.py
tests/helpers/kcworks/services/search/index_templates/stats/aggr_record_view/os-v2/: __init__.py  aggr-record-view-v1.0.0.json
tests/helpers/kcworks/services/search/index_templates/stats/file_download/: __init__.py
tests/helpers/kcworks/services/search/index_templates/stats/file_download/os-v2/: __init__.py  file-download-v1.0.0.json
tests/helpers/kcworks/services/search/index_templates/stats/record_view/: __init__.py
tests/helpers/kcworks/services/search/index_templates/stats/record_view/os-v2/: __init__.py  record-view-v1.0.0.json
tests/helpers/sample_records/: __init__.py  sample11451.py  sample16079.py  sample22625.py  sample22647.py  sample28491.py  sample33383.py  sample34031.py  sample38367.py  sample42615.py  sample44881.py  sample45177.py  sample48799.py  sample583.py  sample_metadata_book_pdf.py  sample_metadata_chapter2_pdf.py  sample_metadata_chapter_pdf.py  sample_metadata_journal_article2_pdf.py  sample_metadata_journal_article3_pdf.py  sample_metadata_journal_article4_pdf.py  sample_metadata_journal_article5_pdf.py  sample_metadata_journal_article6_pdf.py  sample_metadata_journal_article7_pdf.py  sample_metadata_journal_article_pdf.py  sample_metadata_thesis_pdf.py
tests/helpers/sample_records/import_files/: sample_file.docx
tests/helpers/sample_stats_data/: sample_record_snapshot_docs.py  sample_usage_query_responses.py
tests/helpers/templates/security/email/: welcome_neh.html  welcome_neh.txt
tests/pytest_plugins/: __init__.py  pytest_live_status.py
