[build-system]
build-backend = "setuptools.build_meta"
requires = ["babel>2.8", "setuptools>=61", "wheel"]

[project]
name = "invenio-record-importer-kcworks"
version = "0.4.0"

description = "Bulk import records into a InvenioRDM instance configured for Knowledge Commons Works"
readme = "README.md"
keywords = [
  "bulk-import",
  "invenio",
  "invenio-rdm",
  "knowledge-commons-works",
  "record-importer",
]

license = "MIT"
authors = [{ name = "Mesh Research", email = "scottia4@msu.edu" }]
requires-python = ">=3.12"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click",
  "halo",
  "invenio-app-rdm[opensearch2]<14",
  "invenio-communities",
  "invenio-group-collections-kcworks",
  "invenio-rdm-records",
  "invenio-records-resources",
  "invenio-remote-user-data-kcworks",
  "invenio-stats-dashboard",
  "invenio-utilities-tuw",
  "isbnlib",
  "jsonlines",
  "kcworks",
  "langdetect",
  "pydantic",
  "python-dateutil",
  "python-iso639",
  "python-stdnum",
  "pytz",
  "requests",
  "timefhuman",
  "titlecase",
  "unidecode",
  "validators",
]

optional-dependencies.dev = ["bumpver", "check-manifest", "ipykernel"]
optional-dependencies.test = [
  "coverage",
  "mypy>=1.8",
  "pytest",
  "pytest-cov>=6.2.1",
  "pytest-invenio>=3.3,<4",
  "pytest-isort>=4",
  "pytest-mock",
  "pytest-mypy>=0.10",
  "pytest-ruff>=0.1",
  "requests-mock",
  "ruff>=0.3",
  "selenium",
  "wheel",
]

urls."Homepage" = "https://github.com/Knowledge-Commons-Works/invenio-record-importer-kcworks"

scripts.importer = "invenio_record_importer_kcworks.cli:cli"
entry-points."flask.commands".importer = "invenio_record_importer_kcworks.cli:cli"
entry-points."invenio_base.api_apps".invenio_record_importer_kcworks = "invenio_record_importer_kcworks.ext:InvenioRecordImporter"
entry-points."invenio_base.api_blueprints".invenio_record_importer_kcworks = "invenio_record_importer_kcworks.resources:create_api_blueprint"
entry-points."invenio_base.apps".invenio_record_importer_kcworks = "invenio_record_importer_kcworks.ext:InvenioRecordImporter"
entry-points."invenio_celery.tasks".invenio-record-importer-kcworks = "invenio_record_importer_kcworks.tasks"

[tool.uv.sources]
# kcworks is not overridden here: the root workspace (knowledge-commons-works or kcworks-next)
# provides it via its [tool.uv.sources], so both clones resolve to the current repo.
# CI script will modify other entries as needed (e.g. GitHub source).
kcworks = { path = "../../../..", editable = true }
invenio-communities = { path = "../invenio-communities", editable = true }
invenio-group-collections-kcworks = { path = "../invenio-group-collections-kcworks", editable = true }
invenio-remote-user-data-kcworks = { path = "../invenio-remote-user-data-kcworks", editable = true }
invenio-stats-dashboard = { path = "../invenio-stats-dashboard", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
  "**/*.ipynb",                                    # Exclude Jupyter notebook files
  "invenio_record_importer_kcworks/deprecated/**", # Exclude deprecated files
]

lint.select = ["B", "D", "DOC", "E", "F", "I", "UP"]
lint.ignore = [
  "D412", # Missing blank line before closing docstring 
  "W1",   # Indentation warnings
  "W2",   # Whitespace warnings
  "W3",   # Blank line warnings
]
lint.per-file-ignores."__init__.py" = ["D104", "E402", "F401"]
lint.isort.known-first-party = [
  "invenio_stats_dashboard",
  "invenio_group_collections_kcworks",
  "tests",
]
lint.pydocstyle.convention = "google"
lint.preview = true

[tool.isort]
profile = "black"
line_length = 88
verbose = true
multi_line_output = 3 # Vertical hanging indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip = [
  "__pycache__", # Skip cache directories
  # ".venv",  # Skip virtual environment
  # "node_modules",  # Skip node modules
]

[tool.check-manifest]
ignore = [
  "PKG-INFO",
  ".egg-info",
  ".egg-info/*",
  "setup.cfg",
  ".DS_Store",
  ".hgtags",
  ".hgsigs",
  ".hgignore",
  ".gitignore",
  ".bzrignore",
  ".gitattributes",
  ".gitmodules",
  ".github/*",
  "* .mo",
  "dist/*",
  "build/*",
  ".venv/*",
  "*.pyc",
  "__pycache__/*",
  # Ignore submodule directories so check-manifest doesn't require their contents
  "invenio_record_importer_kcworks/dependencies",
  "invenio_record_importer_kcworks/dependencies/*",
  "invenio_record_importer_kcworks/dependencies/*/*",
  "invenio_record_importer_kcworks/dependencies/*/*/*",
  ".vscode/*",
]

[tool.pytest.ini_options]
addopts = """
--ruff --doctest-modules
--log-cli-level=DEBUG
--ignore=app_data
--ignore=docs
--ignore=node_modules
--ignore=scripts
--ignore=tests/helpers
--ignore=invenio_record_importer_kcworks/deprecated
--cov=invenio_record_importer_kcworks 
--cov-report=term-missing
"""
isort_show_files = true
log_cli_level = "DEBUG"
norecursedirs = []
plugins = [
  "tests.fixtures.communities",
  "tests.fixtures.metadata_fields",
  "tests.fixtures.custom_fields",
  "tests.fixtures.identifiers",
  "tests.fixtures.records",
  "tests.fixtures.saml",
  "tests.fixtures.stats",
  "tests.fixtures.users",
  "tests.fixtures.vocabularies.affiliations",
  "tests.fixtures.vocabularies.community_types",
  "tests.fixtures.vocabularies.date_types",
  "tests.fixtures.vocabularies.descriptions",
  "tests.fixtures.vocabularies.languages",
  "tests.fixtures.vocabularies.licenses",
  "tests.fixtures.vocabularies.resource_types",
  "tests.fixtures.vocabularies.roles",
  "tests.fixtures.vocabularies.subjects",
]
testpaths = ["tests", "invenio_record_importer_kcworks"]

[tool.coverage.run]
omit = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
follow_imports = "skip"
allow_untyped_globals = true
exclude = ["invenio_record_importer_kcworks/deprecated/.*"]

[tool.babel.compile_catalog]
directory = "translations/"
use-fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "Mesh Research"
msgid_bugs_address = "scottia4@msu.edu"
mapping-file = "translations/babel.ini"
output-file = "translations/messages.pot"
add-comments = "NOTE"

[tool.babel.init_catalog]
input-file = "translations/messages.pot"
output-dir = "translations/"

[tool.babel.update_catalog]
input-file = "translations/messages.pot"
output-dir = "translations/"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
overrides = [
  "--ignore-missing-imports",
  "--follow-imports=silent",
  "--show-error-codes",
  "--no-error-summary",
]

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"', 'current_version = "{version}"']
"README.md" = ["Version {version}"]
"VERSION" = ['^"{version}"']
"invenio_record_importer_kcworks/__init__.py" = ['^__version__ = "{version}"']
